Widget includes fixes

--- a/includes/_widget_slidebreak.liquid
+++ b/includes/_widget_slidebreak.liquid
@@ -1,6 +1,6 @@
-    </div>
-  </div>
-</div>
+    </div> <!-- end span4 -->
+  </div> <!-- end row-fluid -->
+</div> <!-- end item -->
 <div class="item">
   <div class="row-fluid">
     <div class="block span4">
