--- a/includes/_widget_end.liquid
+++ b/includes/_widget_end.liquid
@@ -1,2 +1,4 @@
 </div>
+</div>
+</div>
 <a class="carousel-control left" href="#myCarousel" data-slide="prev">prev</a><a class="carousel-control right" href="#myCarousel" data-slide="next">next</a></div>
