--- a/includes/_widget_end.liquid
+++ b/includes/_widget_end.liquid
@@ -2,4 +2,4 @@
 </div>
 </div>
 </div>
-<a class="carousel-control left" href="#myCarousel" data-slide="prev">prev</a><a class="carousel-control right" href="#myCarousel" data-slide="next">next</a></div>
+<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a><a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a></div>
