--- a/includes/_widget_end.liquid
+++ b/includes/_widget_end.liquid
@@ -1,5 +1,7 @@
 </div>
 </div>
 </div>
+<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a><a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
-<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a><a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a></div>
+<div id="container" class="row-fluid">
+<div class="span8 offset2">
