--- a/includes/_widget_start.liquid
+++ b/includes/_widget_start.liquid
@@ -1,5 +1,7 @@
+</div>
+</div>
 <div id="myCarousel" class="carousel slide" data-interval="false">
-  <div class="carousel-inner">
-    <div class="active item">
-      <div class="row-fluid">
-        <div class="block span4">
+<div class="carousel-inner">
+<div class="active item">
+<div class="row-fluid">
+<div class="block span4">
