--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,9 @@
+* {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
 #container {
-	padding: 90px 10px 0px 10px;
+	padding: 90px 100px 0px 100px;
 	margin-bottom: 0;
 }
 
@@ -89,6 +93,11 @@ h1 {
 		margin-top: 30px;
 	}
 
+	iframe {
+		width: 100%;
+		min-height: 400px;
+	}
+
 	p.pop.btn {
 		margin-bottom: 20px;
 	}
@@ -104,6 +113,7 @@ h1 {
 
 	.carousel {
 		padding-top: 0px;
+		margin: 0 -100px 0 -100px;
 	}
 
 	.carousel-inner {
