--- a/includes/_widget_end.liquid
+++ b/includes/_widget_end.liquid
@@ -1,5 +1,6 @@
 </div>
 </div>
 </div>
+</div>
 <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a><a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
